src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__flat_view_done_shows_the_task_not_the_epic_card.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
          ◦ BACKLOG 0                  ◦ RUNNING 0                   ◦ REVIEW 0                    ▸ DONE 1 [ ]
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
                              │                           │                              │ ╭──────────────────────────╮
                              │                           │                              │ │  ▎ #1 Task 1             │
                              │                           │                              │ │   ✓ <1h                  │
                              │                           │                              │ ╰──────────────────────────╯
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
[flat] [e]dit  [H] back  [x] delete  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D] quick  [s]plit  [F]lat
