src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__flat_view_orphan_separator.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
          ◦ BACKLOG 0                ▸ RUNNING 2 [ ]                 ◦ REVIEW 0                      ◦ DONE 0
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
                              │  ── active                │                              │
                              │── #10 My Feature ──────── │                              │
                              │ ╭───────────────────────╮ │                              │
                              │ │  ▎ #1 Task 1          │ │                              │
                              │ │   ◉ running           │ │                              │
                              │ ╰───────────────────────╯ │                              │
                              │                           │                              │
                              │╌╌ · ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌│                              │
                              │ ╭───────────────────────╮ │                              │
                              │ │  ▎ #2 Task 2          │ │                              │
                              │ │   ◉ running           │ │                              │
                              │ ╰───────────────────────╯ │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
[flat] [Space] session  [e]dit  [L] move  [H] back  [x] done  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D]
