src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__flat_view_substatus_indicators_above_epic_headers.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
          ◦ BACKLOG 0                ▸ RUNNING 3 [ ]                 ◦ REVIEW 0                      ◦ DONE 0
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
                              │  ── needs input           │                              │
                              │── #10 Epic Alpha ──────── │                              │
                              │ ╭───────────────────────╮ │                              │
                              │ │  ▎ #1 Task 1          │ │                              │
                              │ │   ◉ blocked           │ │                              │
                              │ ╰───────────────────────╯ │                              │
                              │                           │                              │
                              │  ── active                │                              │
                              │── #10 Epic Alpha ──────── │                              │
                              │ ╭───────────────────────╮ │                              │
                              │ │  ▎ #3 Task 3          │ │                              │
                              │ │   ◉ running           │ │                              │
                              │ ╰───────────────────────╯ │                              │
                              │── #20 Epic Beta ───────── │                              │
                              │ ╭───────────────────────╮ │                              │
                              │ │  ▎ #2 Task 2          │ │                              │
                              │ │   ◉ running           │ │                              │
                              │ ╰───────────────────────╯ │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
[flat] [Space] session  [e]dit  [L] move  [H] back  [x] done  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D]
