src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_append_only_indicator_on_feed_epic.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                 manual dispatch [U]  append-only  group:off [R]  🔕  [N]
        ▸ BACKLOG 0 [ ]                ◦ RUNNING 0                   ◦ REVIEW 0                      ◦ DONE 0
╭ #1 Log Warnings ─────────────────────────────────────────────────────────────────────────────────────────────────────╮
│──────────────────────────────│──────────────────────────│──────────────────────────────│─────────────────────────────│
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
[a] select all  [n]ew  [E]pic  [D] quick  [s]plit  [F]lat  [f]ilter  [/] search  [P] todo  [t] add  [?] help
